--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N8QYPV5YLR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N8QYPV5YLR');
+</script>
     <title>Crypto-star</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
